--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -1,6 +1,10 @@
 html
   head
     title Agogo Sing
+    meta(
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    )
     link(
       rel='stylesheet'
       href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css',
