--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -15,7 +15,8 @@ html
     )
   body
     div.container
-      h1.title Agogo Sing
+      div.page-header
+        h1.title Agogo Sing
       div.question-group
         form.form-group(action='/api/submit', method='post')
           div.question-item
