Add thanks page

--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -16,7 +16,7 @@ html
   body
     div.container
       div.page-header
-        h1.title Agogo Sing
+        h1.center Agogo Sing
       div.question-group
         form.form-group(action='/api/submit', method='post')
           div.question-item
