Margaret likes Margaret than Maggie

--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -1,6 +1,6 @@
 html
   head
-    title John & Maggie
+    title John & Magaret
     meta(
       name="viewport"
       content="width=device-width, initial-scale=1"
@@ -16,7 +16,7 @@ html
   body
     div.container
       div.page-header
-        h1.center John & Maggie
+        h1.center John & Magaret
         p.center We are getting married. Let's have fun together.
       div.info-group
         div.info-item
