--- a/views/pages/thanks.pug
+++ b/views/pages/thanks.pug
@@ -1,6 +1,6 @@
 html
   head
-    title Agogo Sing
+    title=__('john-and-margaret')
     meta(
       name="viewport"
       content="width=device-width, initial-scale=1"
@@ -16,5 +16,5 @@ html
   body
     div.container
       div.page-header
-        h1.center Thanks!
-      h4.center Looking forward to your coming.
+        h1.center=__('thanks')
+      h4.center=__('looking-forward')
