--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -14,6 +14,11 @@ html
       href='/css/index.css',
     )
   body
+    div.background
+      div.pig#pig-1
+      div.pig#pig-2
+      div.pig#pig-3
+      div.pig#pig-4
     div.container
       div.page-header
         h1.center=__('john-and-margaret')
@@ -80,7 +85,7 @@ html
                 span=__('yes')
           div.question-item
             label=__('say-something-label')
-            textarea.form-control(name='saySomething')
+            textarea.form-control#say-something-input(name='saySomething')
           div.question-item
             input.form-control(type='submit', value=__('done'))
           div.warn.center(data-blank-warn-msg=__('blank-warn'), id='warn')
