--- a/static/css/index.css
+++ b/static/css/index.css
@@ -34,28 +34,56 @@
 
 .pig {
     position: absolute;
+    cursor: pointer;
 }
 
 #pig-1 {
-    height: 40px;
-    width: 60px;
-    background: blue;
+    height: 66px;
+    width: 96px;
+    animation: pig-waiting-1-keyframes .2s steps(3) infinite alternate;
+    background: url(../images/pig-waiting-1.svg) no-repeat;
 }
 
 #pig-2 {
-    height: 70px;
-    width: 70px;
+    height: 38px;
+    width: 52px;
     background: magenta;
+    animation: pig-waiting-2-keyframes .2s steps(3) infinite alternate;
+    background: url(../images/pig-waiting-2.svg) no-repeat;
 }
 
 #pig-3 {
-    height: 60px;
-    width: 40px;
+    height: 46px;
+    width: 64px;
     background: green;
+    animation: pig-waiting-3-keyframes .2s steps(3) infinite alternate;
+    background: url(../images/pig-waiting-3.svg) no-repeat;
 }
 
 #pig-4 {
-    height: 30px;
-    width: 70px;
+    height: 68px;
+    width: 96px;
     background: yellow;
+    animation: pig-waiting-4-keyframes .2s steps(3) infinite alternate;
+    background: url(../images/pig-waiting-4.svg) no-repeat;
+}
+
+@keyframes pig-waiting-1-keyframes {
+    from { background-position:  0px; }
+    to { background-position: -288px; }
+}
+
+@keyframes pig-waiting-2-keyframes {
+    from { background-position:  0px; }
+    to { background-position: -156px; }
+}
+
+@keyframes pig-waiting-3-keyframes {
+    from { background-position:  0px; }
+    to { background-position: -192px; }
+}
+
+@keyframes pig-waiting-4-keyframes {
+    from { background-position:  0px; }
+    to { background-position: -288px; }
 }
