--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -14,12 +14,12 @@ html
       href='/css/index.css',
     )
   body
-    div.background
+    div#graphics
       div.pig#pig-1
       div.pig#pig-2
       div.pig#pig-3
       div.pig#pig-4
-    div.container
+    div#container
       div.page-header
         h1.center=__('john-and-margaret')
         p.center=__('wedding-ceremony')
