--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -19,7 +19,7 @@ html
       div.pig#pig-2
       div.pig#pig-3
       div.pig#pig-4
-    div#container
+    div.container
       div.page-header
         h1.center=__('john-and-margaret')
         p.center=__('wedding-ceremony')
