Fix some wording

--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -52,6 +52,8 @@ html
         div.info-item
           label=__('address-label')
           span=__('address-value')
+        div.info-item
+          span=__('fill-out-before')
       div.question-group
         form.form-group#questions(action='/api/submit', method='post')
           div.question-item
